Second_Step/data/45/10/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:23: error: '.class' expected
                    echanger(int[] tab; tab[j]; tab[j+1]);
                                   ^
Tools.java:23: error: not a statement
                    echanger(int[] tab; tab[j]; tab[j+1]);
                                           ^
Tools.java:23: error: not a statement
                    echanger(int[] tab; tab[j]; tab[j+1]);
                                                   ^
Tools.java:23: error: ';' expected
                    echanger(int[] tab; tab[j]; tab[j+1]);
                                                        ^
Executable.java:7: error: '[' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                             ^
Executable.java:7: error: ']' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                    ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                     ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                      ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                       ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                        ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                         ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                          ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                           ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                            ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                             ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                              ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                               ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                                ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                                 ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                                  ^
Executable.java:7: error: ';' expected
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                                   ^
Executable.java:7: error: illegal start of expression
        int [] tab1 = new int tab [2,8,4,5,7,4,2,9,3];
                                                    ^
22 errors
Not compiled
--|>
Grade :=>>0.00000
